tests/NormalTests/paczka2/big_fuzzy/50110865.err
Error in line 1: UJ9J63c S830 85,1
Error in line 2: J485zTVgI S491 8,4
Error in line 20: njkYaKWpmAz S627 1,8
Error in line 26: njkYaKWpmAz S83z 5z,8
Error in line 22: S627 S627 29,0
Error in line 28: J485zTVgI S491 6,6
Error in line 25: njkYaKWpmAz S830 22,8
Error in line 34: miboqbjCk S62 8,1
Error in line 46: UJ9J63c A281 28,54
Error in line 52: YhfVxDutg S830 422,07
Error in line 51: UJ9J63c S627 63,7
Error in line 39: YhfVxDutg S830 99,0
Error in line 58: N5cWE4 A281 57,5
Error in line 71: njkYaKWpmAz S830 64,4
Error in line 68: miboqbjCk S627 4,4
Error in line 86: UJ9J&3c S491 79,0
Error in line 88: J485zTVgI S830 60,6
Error in line 95: UJ9J63c S491 75,4
Error in line 106: J485zTV{I S627 215,5
Error in line 103: njkYaKWpmAz A281 105,1
Error in line 104: N5cWE4 S830 10,1
Error in line 112: S627 S627 1,0
Error in line 102: J485zTVgI S627 68,2
Error in line 132: miboqbjCk S491 3319
Error in line 128: miboqbjCk S491 78,1
Error in line 127: S627 S491 99,8
Error in line 141: UJ9J63c A281 177,8
Error in line 156: S627 A281 6,8
Error in line 164: S627 S830 13,37
Error in line 158: miboqbjCk S830 79,5
Error in line 163: S627 S627 95,0
Error in line 161: UJ9J63c S627 49,7
Error in line 175: S627 S830 15,8
Error in line 180: S627 A281 74,6
Error in line 176: N5cWE4 S830 26,9
Error in line 194: J485zTVgI A281 13,1
Error in line 205: UJ9J63c S491 26,0
Error in line 206: N5cWE4 S491 91,4
Error in line 212: YhfVxDutg S491 5,8
Error in line 220: njkYaKWpmAz A281 -1,0
Error in line 214: J485zTVgI S830 18,1
Error in line 219: miboqbjCk A281 60,5
Error in line 222: miboqbjCk S627 4,8
Error in line 233: miboqbjCk S491 159,01
Error in line 229: S627 A281 2,7
Error in line 218: YhfVxDutg A281 1,8
Error in line 217: njkYaKWpmAz A281 48,4
Error in line 237: YhfVxDutg S627 47,0
Error in line 242: YhfVxDutg S491 3,4
Error in line 243: YhfVxDutg A281 95,0
Error in line 231: miboqbjCk S491 38,7
Error in line 244: YhfVxDutg S830 13,9
